unpackaged/main/default/objects/ffct__BundleJobItem__c/ffct__BundleJobItem__c.object-meta.xml
<CustomObject>
    <customHelpPage>ffct__bundlejobonlinehelp</customHelpPage>
    <description>Details of the bundle items processed in a bundle job.</description>
    <label>Bundle Job Item</label>
    <nameField>
        <label>Bundle Job Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bundle Job Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>