unpackaged/main/default/objects/ffct__BundleJobItem__c/fields/ffct__Bundle__c.field-meta.xml
<CustomField>
    <fullName>ffct__Bundle__c</fullName>
    <label>Bundle</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>