unpackaged/main/default/objects/ffct__BundleJobItem__c/fields/ffct__BundleJob__c.field-meta.xml
<CustomField>
    <fullName>ffct__BundleJob__c</fullName>
    <label>Bundle Job</label>
    <referenceTo>ffct__BundleJob__c</referenceTo>
    <relationshipName>BundleJobItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>